--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #1f1f1f;
+    color:#fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 100vw;
+}
+
+#root{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
