--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,20 @@ body{
     justify-content: center;
     align-items: center;
 }
+
+.box{
+    width: 120px;
+    height: 120px;
+    border-radius: 20%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    
+
+    
+}
