--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background-color: #1f1f1f;
-    color:#fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
 
-#root{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .box{
     width: 120px;
     height: 120px;
     border-radius: 20%;
-    background-color: #fff;
+    background-color: #7176a7;
     display: flex;
     align-items: center;
     justify-content: center;
